--- a/sitemap.html
+++ b/sitemap.html
@@ -46,6 +46,8 @@
             <li><a target="_blank" href="admin-all-sellerprofile-settings.html">Admin -  Seller Profile / Settings</a></li>
             <li><a target="_blank" href="admin-sellers-cards.html">Admin -  Sellers (Cards)</a></li>
             <li><a target="_blank" href="admin-sellers-list.html">Admin -  Sellers (List)</a></li>
+            <li><a target="_blank" href="admin-need-to-be-approved.html">Admin -  Need to be approved</a></li>
+            <li><a target="_blank" href="admin-need-to-be-approved-sellerinfo.html">Admin -  Need to be approved / seller information</a></li>
         </ul>
         <ul>
             <li><h3>Account</h3></li>
