--- a/admin-need-to-be-approved.html
+++ b/admin-need-to-be-approved.html
@@ -107,10 +107,60 @@
                                 <a href="#" class="greenbtn">Button</a>
                             </div>
                         </div>
-                        <a href="#" class="notification">
+                        <div class="notification">
                             <img src="img/admin/notification.svg" alt="img">
                             <span>1</span>
-                        </a>
+                        </div>
+                        <div class="notification__dropdown">
+                            <p class="notification__title">Notifications</p>
+                            <div class="notification__list">
+                                
+                                <a href="#" class="notification__row">
+                                    <div class="notification__img">
+                                        <img src="img/admin/notification-icon1.svg" alt="icon">
+                                    </div>
+                                    <div class="notification__descr">
+                                        <p class="title">Support Call</p>
+                                        <p class="description">Has placed suport call</p>
+                                    </div>
+                                    <div class="notification__time">
+                                        <img src="img/admin/clock-icon.svg" alt="img">
+                                        <span>12 PM</span>
+                                    </div>
+                                </a>
+                                <div class="notification__row">
+                                    <div class="notification__img">
+                                        <img src="img/admin/notification-icon2.svg" alt="icon">
+                                    </div>
+                                    <div class="notification__descr">
+                                        <p class="title">New request</p>
+                                        <p class="description">Add Dany Jones as your cont...</p>
+                                        <div class="notification__row-btns">
+                                            <a href="#" class="approve">Approve</a>
+                                            <a href="#" class="delete">Delete</a>
+                                        </div>
+                                    </div>
+                                    <div class="notification__time">
+                                        <img src="img/admin/clock-icon.svg" alt="img">
+                                        <span>12 PM</span>
+                                    </div>
+                                </div>
+                                <a href="#" class="notification__row">
+                                    <div class="notification__img">
+                                        <img src="img/admin/notification-icon3.svg" alt="icon">
+                                    </div>
+                                    <div class="notification__descr">
+                                        <p class="title">Server overloaded</p>
+                                        <p class="description">Donec mattis augue a ni...</p>
+                                    </div>
+                                    <div class="notification__time">
+                                        <img src="img/admin/clock-icon.svg" alt="img">
+                                        <span>12 PM</span>
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
                         <a href="#">
                             <img src="img/selleracc/question-icon.svg" alt="img">
                         </a>
