--- a/sitemap.html
+++ b/sitemap.html
@@ -48,6 +48,7 @@
             <li><a target="_blank" href="admin-sellers-list.html">Admin -  Sellers (List)</a></li>
             <li><a target="_blank" href="admin-need-to-be-approved.html">Admin -  Need to be approved</a></li>
             <li><a target="_blank" href="admin-need-to-be-approved-sellerinfo.html">Admin -  Need to be approved / seller information</a></li>
+            <li><a target="_blank" href="admin-whale-sellers.html">Admin -  Whale sellers</a></li>
         </ul>
         <ul>
             <li><h3>Account</h3></li>
