--- a/sitemap.html
+++ b/sitemap.html
@@ -51,6 +51,8 @@
             <li><a target="_blank" href="admin-whale-sellers.html">Admin -  Whale sellers</a></li>
             <li><a target="_blank" href="admin-receipts.html">Admin -  Receipts</a></li>
             <li><a href="admin-seller-account-categories.html" target="_blank">Seller Account/Product list/Categories</a></li>
+            <li><a href="admin-seller-account-addcategory.html" target="_blank">Seller Account/Product list/Add Category</a></li>
+            <li><a href="admin-sales-by-sellers.html" target="_blank">Sales by sellers</a></li>
             
         </ul>
         <ul>
