--- a/admin-sales-by-sellers.html
+++ b/admin-sales-by-sellers.html
@@ -100,6 +100,7 @@
                     </ul>
                 </div>
             </aside>
+
             <div class="admincontent">
                 <div class="admincontent__head">
                     <div class="searchblock">
@@ -274,78 +275,80 @@
                             <div class="orderrow">
                                 <div class="orderrow__left">
                                     <div class="tablewrapper">
-                                        <table>
-                                            <thead>
-                                                <tr>
-                                                    <th class="product">Product</th>
-                                                    <th class="units">Units</th>
-                                                    <th class="price">Price</th>
-                                                    <th class="total">Total</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="product">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product1.png" alt="img">
+                                        <div class="tablescroll">
+                                            <table>
+                                                <thead>
+                                                    <tr>
+                                                        <th class="product">Product</th>
+                                                        <th class="units">Units</th>
+                                                        <th class="price">Price</th>
+                                                        <th class="total">Total</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td class="product">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product1.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Bauli Plumcake "Senza"...
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Bauli Plumcake "Senza"...
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="units">1 Unit</td>
-                                                    <td class="price">$230</td>
-                                                    <td class="total">$230</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="product">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product2.png" alt="img">
+                                                        </td>
+                                                        <td class="units">1 Unit</td>
+                                                        <td class="price">$230</td>
+                                                        <td class="total">$230</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="product">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product2.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Céréal Apricot
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Céréal Apricot
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="units">2 Unit</td>
-                                                    <td class="price">$400</td>
-                                                    <td class="total">$800</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="product">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product3.png" alt="img">
+                                                        </td>
+                                                        <td class="units">2 Unit</td>
+                                                        <td class="price">$400</td>
+                                                        <td class="total">$800</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="product">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product3.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Musclefit Protein Pancake
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Musclefit Protein Pancake
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="units">1 Unit</td>
-                                                    <td class="price">$30</td>
-                                                    <td class="total">$30</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="product">
-                                                        <div class="ordtabprod">
-                                                            <div class="imgwrap">
-                                                                <img src="img/admin/product4.png" alt="img">
+                                                        </td>
+                                                        <td class="units">1 Unit</td>
+                                                        <td class="price">$30</td>
+                                                        <td class="total">$30</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td class="product">
+                                                            <div class="ordtabprod">
+                                                                <div class="imgwrap">
+                                                                    <img src="img/admin/product4.png" alt="img">
+                                                                </div>
+                                                                <p>
+                                                                    Pesoforma Porridge Cacao
+                                                                </p>
                                                             </div>
-                                                            <p>
-                                                                Pesoforma Porridge Cacao
-                                                            </p>
-                                                        </div>
-                                                    </td>
-                                                    <td class="units">2 Unit</td>
-                                                    <td class="price">$55</td>
-                                                    <td class="total">$110</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+                                                        </td>
+                                                        <td class="units">2 Unit</td>
+                                                        <td class="price">$55</td>
+                                                        <td class="total">$110</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
                                         <div class="order__totalresultwrap">
                                             <div class="order__totalresult">
                                                 <p class="subtotal">
