--- a/sitemap.html
+++ b/sitemap.html
@@ -53,7 +53,7 @@
             <li><a href="admin-seller-account-categories.html" target="_blank">Seller Account/Product list/Categories</a></li>
             <li><a href="admin-seller-account-addcategory.html" target="_blank">Seller Account/Product list/Add Category</a></li>
             <li><a href="admin-sales-by-sellers.html" target="_blank">Sales by sellers</a></li>
-            
+            <li><a href="admin-dashboard.html" target="_blank">Admin / Dashboard</a></li>
         </ul>
         <ul>
             <li><h3>Account</h3></li>
