--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/lib/swiper.css">
     <link rel="stylesheet" href="css/lib/sortable.min.css">
     <link rel="stylesheet" href="css/style.css">
-   
+
 </head>
 
 <body>
@@ -282,26 +282,23 @@
                                             <div class="salestatistics__dates">
                                                 <div class="form-group-zeus">
                                                     <div class="input-group-zeus input-group-zeus--icon-append">
-                                                      <input type="text" name="u-daterange" value="01/01/2018 - 01/15/2018" class="form-control-zeus" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                                        <label for="dates"><img src="img/admin/calendat-icon.svg"
+                                                                alt="icon"></label>
+                                                        <input type="text" name="u-daterange" value="" id="dates"
+                                                            class="form-control-zeus" placeholder="Recipient's username"
+                                                            aria-label="Recipient's username"
+                                                            aria-describedby="basic-addon2">
                                                     </div>
-                                                  </div>
+                                                </div>
                                             </div>
-
 
                                         </div>
 
                                         <div class="salestatistics__body">
 
-                                           
                                             <div style="width: 100%; height: 400px;">
                                                 <canvas id="myChart"></canvas>
                                             </div>
-
-
-
-
-
-
 
                                         </div>
 
@@ -309,7 +306,44 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-4">
-
+                                    <div class="orderoverview">
+                                        <p class="title">Orders Overview</p>
+                                        <div class="donutwrapper">
+                                            <canvas id="donutChart"></canvas>
+                                        </div>
+                                        <ul>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #13B086;"></i>
+                                                Order Completed
+                                            </li>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #1378B0;"></i>
+                                                Order pending
+                                            </li>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #158466;"></i>
+                                                Order Unpaid
+                                            </li>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #FF810D;"></i>
+                                                Order canceled
+                                            </li>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #AED76C;"></i>
+                                                Order returned
+                                            </li>
+                                            <li>
+                                                <i class="orderoverview__listpoint"
+                                                    style="background-color: #C9273A;"></i>
+                                                Order broken
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
 
@@ -335,12 +369,10 @@
     <script src="js/lib/sortable.min.js"></script>
     <script src="js/lib/popper.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/3.0.5/daterangepicker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
